--- a/python-2.ipynb
+++ b/python-2.ipynb
@@ -132,6 +132,278 @@
     "print(\"using default\") # using default\n",
     "func() \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "f0a9ef04",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " my name is shilpa\n",
+      " my course is ML\n",
+      "student details are ('shilpa', 43, 'ML', 'female', 231)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Function define and call\n",
+    "# Class define, initialize , assign to reference \"p1\" and call p1.paramaeter\n",
+    "\n",
+    "class student: # class name defining\n",
+    "  def __init__(self,name,course,age,gender,id): # function or logic initialization\n",
+    "   self.name = name\n",
+    "   self.course = course\n",
+    "   self.age = age\n",
+    "   self.gender = gender\n",
+    "   self.id = id\n",
+    "\n",
+    "s1 = student(\"shilpa\",\"ML\",43,\"female\",231) # assigning to reference as s1\n",
+    "\n",
+    "print (f\" my name is {s1.name}\") #using class-function through assigned s1.parameter like s1.name\n",
+    "print (f\" my course is {s1.course}\") #using class-function through assigned s1.parameter like s1.course\n",
+    "print (f\"student details are {s1.name, s1.age, s1.course, s1.gender, s1.id}\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a4358bd1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "e35eeca2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(10):\n",
+    "    if i == 5:\n",
+    "        break\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "da832e97",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(10):\n",
+    "    if i == 5:\n",
+    "        continue\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "c68a8e4d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(10):\n",
+    "    if i == 5:\n",
+    "        pass\n",
+    "    else:\n",
+    "     print(i)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "07779fad",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "Found 5, skipping the rest of this list.\n",
+      "6\n",
+      "7\n",
+      "Found 8, exiting the loop.\n"
+     ]
+    }
+   ],
+   "source": [
+    "lists = [\n",
+    "    [1, 2, 3],\n",
+    "    [4, 5, 6],\n",
+    "    [7, 8, 9]\n",
+    "]\n",
+    "\n",
+    "for lst in lists:\n",
+    "    for item in lst:\n",
+    "        if item == 5:\n",
+    "            print(\"Found 5, skipping the rest of this list.\")\n",
+    "            continue  \n",
+    "        if item == 8:\n",
+    "            print(\"Found 8, exiting the loop.\")\n",
+    "            break  \n",
+    "        print(item)\n",
+    "    else:\n",
+    "        continue  \n",
+    "    break  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "1e91e338",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "67 is a positive odd number.\n"
+     ]
+    }
+   ],
+   "source": [
+    "number = 67\n",
+    "\n",
+    "if number > 0:\n",
+    "    if number % 2 == 0:\n",
+    "        print(f\"{number} is a positive even number.\")\n",
+    "    else:\n",
+    "        print(f\"{number} is a positive odd number.\")\n",
+    "elif number < 0:\n",
+    "    if number % 2 == 0:\n",
+    "        print(f\"{number} is a negative even number.\")\n",
+    "    else:\n",
+    "        print(f\"{number} is a negative odd number.\")\n",
+    "else:\n",
+    "    print(\"The number is zero.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "48b1e677",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "s is even\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = int(input(\"enter the number : \"))\n",
+    "\n",
+    "if s % 2 == 0:\n",
+    "   print(\"s is even\")\n",
+    "else:\n",
+    "   print(\"s is odd\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "49b07eb5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing (0, 0)\n",
+      "Processing (0, 1)\n",
+      "Processing (0, 2)\n",
+      "Processing (0, 3)\n",
+      "Processing (0, 4)\n",
+      "Processing (1, 0)\n",
+      "Processing (1, 1)\n",
+      "Processing (1, 2)\n",
+      "Processing (1, 3)\n",
+      "Processing (1, 4)\n",
+      "Processing (2, 0)\n",
+      "Processing (2, 1)\n",
+      "Skipping (2, 2)\n",
+      "Processing (2, 3)\n",
+      "Processing (2, 4)\n",
+      "Processing (3, 0)\n",
+      "Processing (3, 1)\n",
+      "Processing (3, 2)\n",
+      "Breaking at (3, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(5):\n",
+    "    for j in range(5):\n",
+    "        if i == 2 and j == 2:\n",
+    "            print(\"Skipping (2, 2)\")\n",
+    "            continue  \n",
+    "        if i == 3 and j == 3:\n",
+    "            print(\"Breaking at (3, 3)\")\n",
+    "            break  \n",
+    "        print(f\"Processing ({i}, {j})\")\n",
+    "    else:\n",
+    "        continue  \n",
+    "    break  \n"
+   ]
   }
  ],
  "metadata": {
