--- a/python-2.ipynb
+++ b/python-2.ipynb
@@ -404,6 +404,79 @@
     "        continue  \n",
     "    break  \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "e444def2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Alice 30\n",
+      "Name: Bob, Age: 22\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = \"Alice\"\n",
+    "age = 30\n",
+    "print(name, age)\n",
+    "\n",
+    "name = \"Bob\"\n",
+    "age = 22\n",
+    "print(f\"Name: {name}, Age: {age}\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "d8b9b380",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "String = Hello, World!\n",
+      "List = ['apple', 'banana', 'cherry']\n",
+      "Tuple = (10.0, 20.0)\n",
+      "Dictionary =  {'name': 'Alice', 'age': 30}\n",
+      "Set = {1, 2, 3}\n",
+      "Frozen_set = frozenset({1, 2, 3})\n"
+     ]
+    }
+   ],
+   "source": [
+    "#String\n",
+    "greeting = \"Hello, World!\"\n",
+    "print(\"String =\", greeting)\n",
+    "\n",
+    "\n",
+    "# List\n",
+    "fruits = ['apple', 'banana', 'cherry']\n",
+    "print(\"List =\" ,fruits)\n",
+    "\n",
+    "# Tuple\n",
+    "coordinates = (10.0, 20.0)\n",
+    "print(\"Tuple =\", coordinates)\n",
+    "\n",
+    "\n",
+    "# Dictionary\n",
+    "person = {'name': 'Alice', 'age': 30}\n",
+    "print(\"Dictionary = \", person)\n",
+    "\n",
+    "#Sets : Unordered collections of unique items.\n",
+    "unique_numbers = {1, 2, 3}\n",
+    "print(\"Set =\", unique_numbers)\n",
+    "\n",
+    "#frozenset : immutable versions of sets\n",
+    "frozen_set = frozenset([1,2,3])\n",
+    "print(\"Frozen_set =\", frozen_set)"
+   ]
   }
  ],
  "metadata": {
